fixed grid spacing

--- a/Template1/CSS/style.css
+++ b/Template1/CSS/style.css
@@ -210,7 +210,12 @@ body {
 .services .services-content {
     display: grid;
     grid-template-columns: repeat(auto-fill, minmax(300px, 1fr));
-    gap: 20px;
+    grid-gap: 30px;
+
+    /*     display: grid;
+    grid-template-columns: repeat(auto-fill, minmax(300px, 1fr));
+    grid-gap: 30px;
+    margin-top: 100px; */
 }
 
 .services .services-content .service {
@@ -238,15 +243,15 @@ body {
 }
 
 .services .services-content .service .text p{
-    color: #777;
-    line-height: 1.8;
+    color: #444;
+    line-height: 1.6;
     font-weight: 300;
 }
 .services-content .col .image {
     text-align: center;
     position: relative;
 }
-.services-content .col .image::before {
+.services .services-content .image::before {
     content: "";
     background-color: var(--secondary-color);
     width: 100px;
@@ -268,10 +273,11 @@ body {
 
 }
 @media (max-width: 1199px) {
- .image-show {
-    display: none;
-}
-}
+    .image-show-hide {
+      display: none;
+    }
+  }
+  
 .services-content .col .image img {
     width: 260px;
 }
